--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
 @import url('./blocks/card/card.css');
 @import url('./blocks/card/__image/card__image.css');
 @import url('./blocks/card/__delete-icon/card__delete-icon.css');
+@import url('./blocks/card/__delete-icon/_hidden/card__delete-icon_hidden.css');
 @import url('./blocks/card/__body/card__body.css');
 @import url('./blocks/card/__title/card__title.css');
 @import url('./blocks/card/__like-body/card__like-body.css');
