--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -1,6 +1,6 @@
 .popup__container {
     position: relative;
-    max-width: 430px;
+    width: 430px;
     background-color: #fff;
     z-index: 2;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
