--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,38 @@
 @import url('./blocks/root/root.css');
 @import url('./blocks/page/page.css');
 @import url('./blocks/header/header.css');
+@import url('./blocks/header/__mobile-container/header__mobile-container.css');
+@import url('./blocks/header/__mobile-container/_type/header__mobile-container_type_opened.css');
+@import url('./blocks/header/__mobile-email/header__mobile-email.css');
+@import url('./blocks/header/__mobile-link/header__mobile-link.css');
+@import url('./blocks/header/__mobile-body/header__mobile-body.css');
 @import url('./blocks/header/__image/header__image.css');
+@import url('./blocks/header/__navbar/header__navbar.css');
+@import url('./blocks/header/__mobile-menu/header__mobile-menu.css');
+@import url('./blocks/header/__mobile-menu/_type/header__mobile-menu_type_open.css');
+@import url('./blocks/header/__mobile-menu/_type/header__mobile-menu_type_close.css');
+@import url('./blocks/header/__email/header__email.css');
+@import url('./blocks/header/__link/header__link.css');
+@import url('./blocks/header/__link/_type/header__link_type_exit.css');
+@import url('./blocks/header/__link/_type/header__link_type_mobile.css');
+
+@import url('./blocks/login/login.css');
+@import url('./blocks/login/__container/login__container.css');
+@import url('./blocks/login/__title/login__title.css');
+@import url('./blocks/login/__form/login__form.css');
+@import url('./blocks/login/__input/login__input.css');
+@import url('./blocks/login/__button/login__button.css');
+
+@import url('./blocks/register/register.css');
+@import url('./blocks/register/__container/register__container.css');
+@import url('./blocks/register/__title/register__title.css');
+@import url('./blocks/register/__form/register__form.css');
+@import url('./blocks/register/__input/register__input.css');
+@import url('./blocks/register/__button/register__button.css');
+@import url('./blocks/register/__caption/register__caption.css');
+@import url('./blocks/register/__link/register__link.css');
+
+
 @import url('./blocks/profile/profile.css');
 @import url('./blocks/profile/__position/profile__position.css');
 @import url('./blocks/profile/__avatar-change/profile__avatar-change.css');
@@ -33,6 +64,8 @@
 @import url('./blocks/popup/_transition/popup_transition.css');
 @import url('./blocks/popup/__container/popup__container.css');
 @import url('./blocks/popup/__body/popup__body.css');
+@import url('./blocks/popup/__icon/popup__icon.css');
+@import url('./blocks/popup/__description/popup__description.css');
 @import url('./blocks/popup/__close-button/popup__close-button.css');
 @import url('./blocks/popup/__title/popup__title.css');
 @import url('./blocks/popup/__input/popup__input.css');
